# github-rs

./: .codacy.yaml  .codecov.yaml  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  SECURITY.md  Taskfile.dist.yaml  about.toml  cliff.toml  cog.toml  deny.toml  mise.toml  nfpm.yaml  sonar-project.properties  treefmt.toml  trivy.yaml
.cargo/: config.toml
.config/: nextest.toml
.github/: dependabot.yml  labeler.yml
.github/workflows/: changelog.yaml  coverage.yaml  cross-build-unix.yaml  cross-build.yaml  labeler.yaml  lint-prettier.yaml  lint.yaml  release-packaging.yaml  scorecard.yaml  security.yaml  stale.yaml  test-with-coverage.yaml  test.yaml
backpack/: Cargo.toml  justfile
backpack/cli/: Cargo.toml  build.rs
backpack/cli/.cargo/: config.toml
backpack/cli/src/: main.rs
backpack/e2e/: Cargo.toml
backpack/e2e/features/: token.feature
backpack/e2e/src/: lib.rs
backpack/e2e/tests/token/: main.rs
backpack/lib/: Cargo.toml  build.rs
backpack/lib/src/: lib.rs
backpack/lib/tests/resources/: forked_repositories.json  forked_repositories.json5  user_repositories.json  user_repositories.json5
backpack/src/: lib.rs  main.rs
config/: aws-ec2.tf
xtask/: Cargo.toml
xtask/src/: main.rs
