# SPDX-License-Identifier: MIT
# SPDX-FileCopyrightText: 2025 yonasBSD

[workspace]
members = ["backpack/cli", "backpack/lib", "backpack/e2e", "xtask"]
resolver = "2"
default-members = ["backpack/cli"]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/yonasBSD/github-rs"

[workspace.dependencies]
tokio = { version = "1.48.0", features = ["full", "macros"] }
clap = { version = "4", features = ["derive"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
terminal-banner = { version = "0.4.1", features = ["color"] }
test-log = { version = "0.2.19", features = ["trace", "color"] }

# crates used only by lib but still common enough to centralize
colored = "3.0.0"
which = "8.0.0"
config = "0.15.19"
xdg = "3.0.0"
reqwest = { version = "0.13.1", default-features = false, features = ["blocking", "hickory-dns", "json", "rustls-tls"] }
env_logger = "0.11.8"
serde_json5 = "0.2.1"

# external git dependency
octocrab = { version = "*", git = "https://github.com/yonasBSD/octocrab", branch = "yonasBSD" }
