[package]
name = "github-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
octocrab = { version = "*", git = "https://github.com/yonasBSD/octocrab", branch = "yonasBSD" }
tokio = { version = "*", features = ["full", "macros"] }
clap = { version = "*", features = ["derive"] }
colored = "2.1.0"
which = "7.0.0"

[[bin]]
name = "github-rs"
path = "src/main.rs"

[features]
coverage = []
