[package]
name = "github-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
octocrab = { version = "*", git = "https://github.com/yonasBSD/octocrab", branch = "yonasBSD" }
tokio = { version = "*", features = ["full", "macros"] }
clap = { version = "*", features = ["derive"] }
colored = "3.0.0"
which = "8.0.0"
config = "0.15.4"
xdg = "3.0.0"
reqwest = { version = "0.12.9", default-features = false, features = ["blocking", "hickory-dns", "json", "rustls-tls"] }
serde_json = "1.0.133"
env_logger = "0.11.5"

[[bin]]
name = "github-rs"
path = "src/main.rs"

[features]
coverage = []
