[package]
name = "github-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/yonasBSD/github-rs"

[dependencies]
github-rs-lib = { package = "github-rs-lib", path = "../lib" }
tokio = { version = "1.45.1", features = ["full", "macros"] }
clap = { version = "*", features = ["derive"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
terminal-banner = { version = "0.4.1", features = ["color"] }
console-subscriber = "0.4.1"

[[bin]]
name = "github-rs"
path = "src/main.rs"

[features]
coverage = []

[dev-dependencies]
test-log = { version = "0.2.17", features = ["trace", "color"] }

[package.metadata.binstall.signing]
algorithm = "minisign"
pubkey = "RWS6/A1iiYtBjU101ofgB5ZBUq+erhj0pAF06delVbHPUiDee7PQvIML"
