# SPDX-License-Identifier: MIT
# SPDX-FileCopyrightText: 2025 yonasBSD

[package]
name = "github-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/yonasBSD/github-rs"

[dependencies]
github-rs-lib = { package = "github-rs-lib", path = "../lib" }
tokio = { version = "1.48.0", features = ["full", "macros"] }
clap = { version = "*", features = ["derive"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
terminal-banner = { version = "0.4.1", features = ["color"] }
console-subscriber = "0.5.0"

[[bin]]
name = "github-rs"
path = "src/main.rs"

[features]
coverage = []

[dev-dependencies]
test-log = { version = "0.2.19", features = ["trace", "color"] }

[package.metadata.binstall.signing]
algorithm = "minisign"
pubkey = "RWS6/A1iiYtBjU101ofgB5ZBUq+erhj0pAF06delVbHPUiDee7PQvIML"
