# SPDX-License-Identifier: MIT
# SPDX-FileCopyrightText: 2025 yonasBSD

[package]
name = "github-rs"
version = "0.1.0"
license = "MIT"
edition = "2024"

[dependencies]
github-rs-lib = { path = "../lib" }
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
terminal-banner.workspace = true
console-subscriber = "0.5.0"

[dev-dependencies]
test-log.workspace = true

[[bin]]
name = "github-rs"
path = "src/main.rs"

[features]
coverage = []

[package.metadata.binstall.signing]
algorithm = "minisign"
pubkey = "RWS6/A1iiYtBjU101ofgB5ZBUq+erhj0pAF06delVbHPUiDee7PQvIML"
