# SPDX-License-Identifier: MIT
# SPDX-FileCopyrightText: 2025 yonasBSD

[package]
name = "github-rs-e2e"
version = "0.1.0"
license = "MIT"
edition = "2024"

[dev-dependencies]
github-rs-lib = { path = "../lib" }
cucumber = { version = "0.22.0", features = ["libtest", "output-json", "output-junit", "timestamps", "tracing"] }
tokio.workspace = true

[[test]]
name = "token"
harness = false
path = "tests/token/main.rs"
