# SPDX-License-Identifier: MIT
# SPDX-FileCopyrightText: 2025 yonasBSD

[package]
name = "github-rs-lib"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Yonas Yanfa", "Yonas Yanfa <no-reply@example.com>"]
description = "Automatically update all your forked repositories on Github."
homepage = "https://github.com/yonasBSD/github-rs"
repository = "https://github.com/yonasBSD/github-rs"
keywords = ["github", "git"]
categories = ["github", "git"]

[features]
coverage = []

[dependencies]
octocrab = { version = "*", git = "https://github.com/yonasBSD/octocrab", branch = "yonasBSD" }
tokio = { version = "1.45.1", features = ["full", "macros"] }
clap = { version = "*", features = ["derive"] }
colored = "3.0.0"
which = "8.0.0"
config = "0.15.4"
xdg = "3.0.0"
reqwest = { version = "0.12.9", default-features = false, features = ["blocking", "hickory-dns", "json", "rustls-tls"] }
#env_logger = "0.11.5"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
terminal-banner = { version = "0.4.1", features = ["color"] }
dns-lookup = "2.0.4"
rdap_client = "0.2.0"
taplo = { version = "0.14.0", features = ["schema", "schemars"] }
uuid = { version = "1.17.0", features = ["v4"] }

[dev-dependencies]
test-log = { version = "0.2.17", features = ["trace", "color"] }
serde_json5 = "0.2.1"

[build-dependencies]
build-data = "0.3.3"
vergen = { version = "9.0.6", features = ["time", "cargo", "build", "rustc", "si"] }
