# SPDX-License-Identifier: MIT
# SPDX-FileCopyrightText: 2025 yonasBSD

[package]
name = "github-rs-lib"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/yonasBSD/github-rs"

[features]
coverage = []

[dependencies]
octocrab = { version = "*", git = "https://github.com/yonasBSD/octocrab", branch = "yonasBSD" }
tokio = { version = "1.48.0", features = ["full", "macros"] }
clap = { version = "*", features = ["derive"] }
colored = "3.0.0"
which = "8.0.0"
config = "0.15.19"
xdg = "3.0.0"
reqwest = { version = "0.12.27", default-features = false, features = ["blocking", "hickory-dns", "json", "rustls-tls"] }
env_logger = "0.11.8"
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
terminal-banner = { version = "0.4.1", features = ["color"] }
serde_json5 = "0.2.1"

[dev-dependencies]
test-log = { version = "0.2.19", features = ["trace", "color"] }
