# SPDX-License-Identifier: MIT
# SPDX-FileCopyrightText: 2025 yonasBSD

[package]
name = "github-rs-lib"
version = "0.1.0"
edition = "2024"

[features]
coverage = []

[dependencies]
octocrab.workspace = true
tokio.workspace = true
clap.workspace = true
colored.workspace = true
which.workspace = true
config.workspace = true
xdg.workspace = true
reqwest.workspace = true
env_logger.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
terminal-banner.workspace = true
serde_json5.workspace = true

[dev-dependencies]
test-log.workspace = true
